fixed sound bug

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
   <section id="title">
 
     <!-- Nav Bar -->
-
+    <iframe src="silence.mp3" allow="autoplay" id="audio" style="display: none"></iframe>
+    <audio id="player" autoplay loop>
+        <source src="سلوزي.mp3" type="audio/mp3">
+    </audio>
     <nav class="navbar sticky-top bg-dark navbar-expand-lg navbar-dark">
         <a class="navbar-brand navbar-right pl-lg-4" href="#">سلوزي</a>
        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,7 +61,8 @@
    </div>
   </nav>
     <!-- Title -->
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/GeD-OaFS-hs?rel=0&autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
   <div class="row">
     <div class="col-lg-6 col-md-6 align-self-center mt-5 mt-md-0 mr-1 ml-1">
       <h1 class="fart">أكادُ من فرط الجمـال أذوبُ</h1>
