--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 <!-- Font Awesome -->
 
 <script src="https://kit.fontawesome.com/6d8216d762.js" crossorigin="anonymous"></script>
+<script type="text/javascript">
 
+</script>
 </head>
 
 <body>
@@ -31,10 +33,8 @@
   <section id="title">
 
     <!-- Nav Bar -->
-    <iframe src="silence.mp3" allow="autoplay" id="audio" style="display: none"></iframe>
-    <audio id="player" autoplay loop>
-        <source src="سلوزي.mp3" type="audio/mp3">
-    </audio>
+
+
     <nav class="navbar sticky-top bg-dark navbar-expand-lg navbar-dark">
         <a class="navbar-brand navbar-right pl-lg-4" href="#">سلوزي</a>
        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -64,10 +64,14 @@
 
 
   <div class="row">
-    <div class="col-lg-6 col-md-6 align-self-center mt-5 mt-md-0 mr-1 ml-1">
+    <div class="col-lg-6 col-md-12 align-self-center mt-5 mt-md-0 mr-1 ml-1">
       <h1 class="fart">أكادُ من فرط الجمـال أذوبُ</h1>
       <h3 class="naseeb">هل يا حبيب في رضــــاك نصــــــــيبُ</h3>
+      <audio controls autoplay>
 
+        <source src="sluzy.mp3" type="audio/mpeg">
+
+      </audio>
     </div>
 
     <div class="row">
